--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,10 @@
+platform :ios, '10.0'
 use_frameworks!
+
 target 'HDWallet_Tests' do
   pod 'HDWalletKit', :path => '../'
-  
-  
+end
+
+target 'HDWalletKit_Tests' do
+    pod 'HDWalletKit', :path => '../'
 end
