--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: 
   - objective-c
-
 osx_image: 
   - xcode9.4
-
 script:
   - xcodebuild test -workspace 'HDWalletKit.xcworkspace' -scheme 'HDWalletKit_Tests' -destination 'platform=iOS Simulator,name=iPhone 7,OS=11.4'
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
