--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language:
   - objective-c
 osx_image: 
   - xcode9.4
+before_install:
+   - pod cache clean --all    
+   - pod update
+install: true
 script:
   - xcodebuild test -workspace 'HDWalletKit.xcworkspace' -scheme 'HDWalletKit_Tests' -destination 'platform=iOS Simulator,name=iPhone 7,OS=11.4'
 after_success:
