--- a/HDWalletKit_Tests/Info.plist
+++ b/HDWalletKit_Tests/Info.plist
@@ -18,5 +18,7 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>BuildSystemType</key>
+	<string>Original</string>
 </dict>
 </plist>
